--- a/frontend/style.css
+++ b/frontend/style.css
@@ -339,7 +339,7 @@ btn-sucess::hover {
 }
 
 .task-list {
-    background: white
+    background: white;
     padding: 2rem;
     border-radius: 16px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
